
### August XX 2022, Release version 0.13.1 ###

  * MODIFIED:
    * removed old code in utils.py.

  * ADDED:
    * a function to update a configuration file has been introduced.
    * few new options have been added to the configuration file.


### August 20 2022, Release version 0.13.0 ###

  * FIXED:
    * when exporting data, if an error occurred and a retry is done, the text in the warning box is not cleared.
    * two variables weren't initialized correctly.

  * ADDED :
    * gusts have been added to 1h forecast window.
    * gusts have been added to 6h forecast window.
    * gusts have been added to 1d OpenWeather forecast window.
    * an icon was missing.
    * an icon for gusts has been added.
    * an icon to open file has been added.
    * if sensor data are old (>2h), a message is displayed.
    * a new infowindow has been introduced.
    * a new way to obtain elevation has been introduced.

  * MODIFIED:
    * the stylesheet of few windows have been modified for better consistency with the main window.
    * the 1d forecast page with MF forecast now show data based on daily forecast.
    * a new way to plot time series has been introduced to improve rendering times.
    * font files have been removed. Now Source Sans Pro must be installed on Raspberry Pi.
    * units for different fields have been put in their own QLabel widget
    * improved reading of battery, signal, pressure, temperature and humidity windows.


### June 23 2022, Release version 0.12.2 ###

  * FIXED:
    * plot thread tried to compute min and max of a list even if the list is empty.
    * MQTT test thread was not handled properly since last version.
    * the dot icons were not well refreshed when the time series button is clicked.
    * MQTT threads was crashing when fields other than temperature were not available for MQTT devices.
    * the mqtt device manager tried to parse calibration methode and value even it is not handled yet. It has been fixed
    .

  * ADDED :